--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Signal E2EE Demo</title>
+</head>
+<body>
+  <h2>Signal-Style Encrypted Chat</h2>
 
+  <input id="user" placeholder="Username">
+  <button onclick="init()">Init</button><br><br>
+
+  <input id="msg" placeholder="Message">
+  <button onclick="send()">Send</button>
+
+  <pre id="log"></pre>
+
+<script type="module" src="app.js"></script>
+</body>
+</html>
